# pg-harden

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TIMECONFIG.json
code/: CHANGELOG.md  Cargo.toml
code/src/: cli.rs  config.rs  error.rs  main.rs  target.rs
code/src/checks/: auth_pghba.rs  mod.rs
diagrams/: DRAWING-HASHES.sha256
diagrams/ARCH/: pg-harden-ARCH-001-RevA-2026-03-20.drawio
docs/: WORKLOG.md
specs/: ARCHITECTURE.md  DENY-ALL-HARDENING.md
src/: cli.rs  connection.rs  lib.rs  main.rs  output.rs
src/checks/: auth_scram.rs  ssl_enabled.rs
